codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_resume_override_matches_rollout_model.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"First post-resume turn where pre-turn override sets model to rollout model; no model-switch update should appear.\",\n&[(\"Last Request Before Resume\", &initial_request),\n(\"First Request After Resume + Override\", &resumed_request),])"
---
Scenario: First post-resume turn where pre-turn override sets model to rollout model; no model-switch update should appear.

## Window 1
-- request 1 (turn; Last Request Before Resume) --
00:message/developer[3]:
    [01] <SKILLS_INSTRUCTIONS>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <headless_session>
        This session runs unattended through `codex exec`. Nobody reads the `commentary` channel while you work,...nd put everything the user needs in the final answer. [hash=cb124ac4f054c233]
        </headless_session>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    seed resume history
-- request 2 (turn; First Request After Resume + Override) --
03:message/assistant:
    recorded before resume
04:message/user:
    <ENVIRONMENT_CONTEXT>
05:message/user:
    first resumed turn after model override
